
  - By default, ccache now puts temporary files in CCACHE_DIR/tmp to avoid
    cluttering the top directory.

  - Improved the test suite and added tests for most of the new functionality.
    It's now also possible to specify a subset of tests to run.

  - Standard error output from the compiler is now only stored in the cache if
    it's non-empty.

  - Added installcheck and distcheck make targets.

  - Clarified cache size limit options' semantics

Bug fixes:

  - Fixed build on FreeBSD.

  - Improved detection of home directory.

  - User-defined CPPFLAGS and LDFLAGS are now respected in the Makefile.

  - Fixed NFS issues.

  - Bail out on profiling options --coverage, -fprofile-arcs,
    -fprofile-generate, -fprofile-use and -ftest-coverage. [Bug #7091]

  - -MD/-MMD options without -MT/-MF are now handled correctly. [Bug #7093]

  - Added support for -Wp,-MD and -Wp,-MMD options.

  - Corrected LRU cleanup handling of object files.

  - utimes() is now used instead of utime() when available. [Bug #7089]

  - Non-writable cache directories are now handled gracefully.

  - Corrected documentation about sharing the cache directory.

  - Fixed compilation warnings from GCC 4.3.

  - The command specified by CCACHE_PREFIX is no longer part of the hash.

  - Fixed bad memory access spotted by Valgrind.

  - Fixed a bug in x_realloc. [Bug #7090]

  - Removed deprecated constructions from ccache.yo.

  - Freed memory is no longer referenced when compiling a .i/.ii file and
    falling back to running the real compiler. [Bug #7092]

  - The test suite is now immune to external values of the CCACHE_* environment
    variables. [Bug #7161]

Compatibility notes:

  - The statistics counters "files in cache" and "cache size" now only include
    object files (previously, files containing cached standard error output
    were counted as well). Consequently, the "max file" and "max cache size"
    settings now specify thresholds for object files count and size.