@@ -96,7 +96,15 @@ Bug fixes:
 
 Compatibility notes:
 
+  - The way the hashes are calculated has changed, so you won't get cache hits
+    for compilation results stored by older ccache versions. In fact, you might
+    as well clear the old cache directory if you want, unless if you plan to
+    keep using an older ccache version.
+
   - The statistics counters "files in cache" and "cache size" now only include
     object files (previously, files containing cached standard error output
     were counted as well). Consequently, the "max file" and "max cache size"
     settings now specify thresholds for object files count and size.
+
+  - Using ccache 3.0 and older ccache versions with the same cache directory
+    works OK, except that the statistics counters will be a bit messed up.
